--- a/conduccion_calor.ipynb
+++ b/conduccion_calor.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GEOFÍSICA MATEMÁTICA Y COMPUTACIONAL\n",
+    "\n",
+    "PROYECTO 1: TRASFERENCIA DE CALOR\n",
+    "\n",
+    "LÓPEZ GARRIDO JOSUÉ\n",
+    "\n",
+    "MARTÍNEZ PÉREZ JOSÉ ANTONIO\n",
+    "\n",
+    "RODRÍGUEZ MENDOZA ALBAN ALEXIS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
